# kaleidoscope

./: .gitignore  docker-compose.yml  package.json  pnpm-lock.yaml  readme.md
.github/workflows/: ci-cd.yml  deploy.yml  lint-build.yml
apps/backend/: package.json
apps/backend/src/: app.ts
web/: biome.json  drizzle.config.ts  package.json  pnpm-lock.yaml
web/actions/: upload.ts
web/app/: page.tsx
web/app/api/upload/: route.ts
web/lib/db/: index.ts  schema.ts
web/lib/db/migrations/: 0000_init.sql
web/lib/db/migrations/meta/: 0000_snapshot.json  _journal.json
web/lib/minio/: buckets.ts  index.ts
web/lib/mq/: index.ts
web/lib/template/: response.ts
workers/: pyproject.toml
workers/app/: __init__.py  config.py
